--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asttokens==2.0.5
 async-timeout==4.0.2
 atomicwrites==1.4.0
 attrs==21.4.0
+backcall==0.2.0
 base58==2.1.1
 bitarray==1.2.2
 black==22.1.0
@@ -13,6 +14,7 @@ click==8.0.3
 colorama==0.4.4
 cytoolz==0.11.2
 dataclassy==0.11.1
+decorator==5.1.1
 eip712==0.1.0
 eth-abi==2.1.1
 eth-account==0.5.7
@@ -25,6 +27,7 @@ eth-rlp==0.2.1
 eth-typing==2.3.0
 eth-utils==1.10.0
 execnet==1.9.0
+executing==0.8.2
 frozenlist==1.3.0
 hexbytes==0.2.2
 hypothesis==6.27.3
@@ -32,9 +35,12 @@ idna==3.3
 inflection==0.5.0
 iniconfig==1.1.1
 ipfshttpclient==0.8.0a2
+ipython==8.0.1
+jedi==0.18.1
 jsonschema==3.2.0
 lazy-object-proxy==1.7.1
 lru-dict==1.1.7
+matplotlib-inline==0.1.3
 multiaddr==0.0.9
 multidict==6.0.2
 mypy-extensions==0.4.3
@@ -42,12 +48,15 @@ mythx-models==1.9.1
 netaddr==0.8.0
 packaging==21.3
 parsimonious==0.8.1
+parso==0.8.3
 pathspec==0.9.0
+pickleshare==0.7.5
 platformdirs==2.4.1
 pluggy==1.0.0
 prompt-toolkit==3.0.26
 protobuf==3.19.4
 psutil==5.9.0
+pure-eval==0.2.2
 py==1.11.0
 py-solc-ast==1.2.9
 py-solc-x==1.1.1
@@ -70,10 +79,12 @@ rlp==2.0.1
 semantic-version==2.8.5
 six==1.16.0
 sortedcontainers==2.4.0
+stack-data==0.2.0
 toml==0.10.2
 tomli==2.0.0
 toolz==0.11.2
 tqdm==4.62.3
+traitlets==5.1.1
 typing_extensions==4.0.1
 urllib3==1.26.8
 varint==1.0.2
